added components to demo UI

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -2,6 +2,7 @@
 
 .button {
   display: inline-block;
+  box-sizing: border-box;
   padding: 10px;
   margin-bottom: 12px;
   border-width: 1px;
@@ -10,10 +11,12 @@
   background-color: semantic-color(neutral, light);
   color: semantic-color(neutral, darkest);
 
-  &:focus {
-    outline: none;
-    border-color: semantic-color(focus, base);
-  }
+  // &:focus {
+  //   outline-width: 1px;
+  //   outline-style: solid;
+  //   outline-color: semantic-color(focus, base);
+  //   border-color: semantic-color(focus, base);
+  // }
 }
 
 .button--primary {
