--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,5 +3,8 @@
 @import "components/_containers";
 @import "components/_typography";
 @import "components/_header";
+@import "components/_tab";
 @import "components/_inputs";
 @import "components/_buttons";
+
+@import "components/_focus";
