--- a/src/scss/components/_inputs.scss
+++ b/src/scss/components/_inputs.scss
@@ -2,14 +2,17 @@
 
 .input {
   display: block;
+  box-sizing: border-box;
   padding: 10px;
   margin-bottom: 12px;
   border-width: 1px;
   border-style: solid;
   border-color: semantic-color(neutral, base);
 
-  &:focus {
-    outline: none;
-    border-color: semantic-color(focus, base);
-  }
+  // &:focus {
+  //   outline-width: 1px;
+  //   outline-style: solid;
+  //   outline-color: semantic-color(focus, base);
+  //   border-color: semantic-color(focus, base);
+  // }
 }
