updated and added example of updated semantics to solidify meaning within the UI

--- a/src/scss/components/_tab.scss
+++ b/src/scss/components/_tab.scss
@@ -34,6 +34,6 @@
 }
 
 .tab__nav-link.is-active {
-  color: semantic-color(focus, dark);
-  border-bottom-color: semantic-color(focus, light);
+  color: semantic-color(presence, dark);
+  border-bottom-color: semantic-color(presence, dark-med);
 }
