--- a/src/scss/global/_variables.scss
+++ b/src/scss/global/_variables.scss
@@ -18,11 +18,11 @@ $color-red: #FF5A43;
 $color-red--light: lighten($color-red, 15%);
 $color-red--dark: darken($color-red, 5%);
 
-$color-green: #2ABB9B;
-$color-green--light: lighten($color-green, 15%);
-$color-green--dark: darken($color-green, 5%);
+$color-green: #198c73;
+$color-green--light: lighten($color-green, 18%);
+$color-green--dark: darken($color-green, 55%);
 
-$color-soft-blue: #4F67FF;
+$color-soft-blue: #245fca;
 $color-soft-blue--light: lighten($color-soft-blue, 15%);
 $color-soft-blue--dark: darken($color-soft-blue, 5%);
 
