more updates to colors

--- a/src/scss/components/_tab.scss
+++ b/src/scss/components/_tab.scss
@@ -35,5 +35,5 @@
 
 .tab__nav-link.is-active {
   color: semantic-color(presence, dark);
-  border-bottom-color: semantic-color(presence, dark-med);
+  border-bottom-color: semantic-color(presence, dark);
 }
