--- a/src/scss/global/_variables.scss
+++ b/src/scss/global/_variables.scss
@@ -10,9 +10,9 @@ $color-gray-dark-med: #777;
 $color-gray-dark: #555;
 $color-gray-darkest: #000;
 
-$color-purple: #413361;
+$color-purple: #543f86;
 $color-purple--light: lighten($color-purple, 45%);
-$color-purple--dark: darken($color-purple, 5%);
+$color-purple--dark: darken($color-purple, 8%);
 
 $color-red: #FF5A43;
 $color-red--light: lighten($color-red, 15%);
